# the-final-study-ai

./: .gitignore  README.fa.md  README.md  pyproject.toml
.github/workflows/: cross-platform-gui.yml
docs/: GUI_LINUX_INSTALL.md  GUI_SOURCE_INSTALL.md  GUI_TROUBLESHOOTING.md  GUI_WINDOWS_INSTALL.md  INTERACTIVE_ACCEPTANCE_CHECKLIST.md  RELEASE_NOTES_v0.2.0-gui.md  RELEASE_QUALIFICATION_v0.2.0-gui.md  SUPPORT_MATRIX.md  TEST_v0.1.0.md
docs/superpowers/plans/: 2026-06-19-cross-platform-gui-implementation.md
docs/superpowers/specs/: 2026-06-19-cross-platform-gui-contracts.md  2026-06-19-cross-platform-gui-design.md
gui/: __init__.py  __main__.py  app.py  i18n.py  layout.py  navigation.py  paths.py  settings.py  themes.py  tokens.py
gui/dependencies/: __init__.py  installer.py  manifest.py  models.py  probes.py  profile_lock.py  providers.py  registry.py  tool_paths.py
gui/pipeline/: __init__.py  adapter.py  artifact_catalog.py  contracts_bridge.py  event_watcher.py  exit_codes.py  models.py  process_controller.py  progress_tracker.py  resume_adapter.py  run_store.py  validation.py
gui/platform/: __init__.py  open_path.py
gui/resources/translations/: app_fa.qm  app_fa.ts
gui/widgets/: __init__.py  history_page.py  install_dialog.py  new_run_page.py  path_label.py  progress_page.py  results_page.py  review_page.py  setup_page.py  shell.py
packaging/: pysidedeploy.spec
requirements/: dev-lock.txt  gui-lock.txt
schemas/: compatibility-manifest-v1.json  event-v1.schema.json  parts-manifest-v1.schema.json  run-manifest-v1.schema.json
scripts/: artifact_validators.py  chatgpt_login_probe.py  combine_parts_to_sections.py  export_study_index_pdf.py  file_lock.py  pipeline_contracts.py  run_pipeline.py  run_pipeline.sh  segment_markdown_study_parts.py
scripts/ci/: gui_launch_smoke.py  record_package_sizes.py  run_quality_gates.sh  run_release_qualification.sh  validate_gui_resources.py  verify_package_outputs.py
tests/: test_artifact_validators.py  test_mindmap_integration.py  test_pipeline_contracts.py  test_run_pipeline.py  test_segmentation_contracts.py
tests/gui/: conftest.py  test_ci_resources.py  test_dependency_probes.py  test_history_page.py  test_installer.py  test_layout.py  test_new_run_page.py  test_path_label.py  test_pipeline_adapter.py  test_pipeline_validation.py  test_process_controller.py  test_profile_lock.py  test_progress_tracker.py  test_resume_adapter.py  test_run_store.py  test_screenshots.py  test_setup_page.py  test_shell.py
