[project]
name = "the-final-study-ai"
version = "0.2.0.dev0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "bandit>=1.8,<2",
  "jsonschema>=4.23,<5",
  "mypy>=1.15,<3",
  "pytest>=8,<10",
  "ruff>=0.11,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["scripts/pipeline_contracts.py", "scripts/run_pipeline.py", "tests/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["scripts/pipeline_contracts.py", "scripts/run_pipeline.py"]

[tool.bandit]
exclude_dirs = ["tests"]
