[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "the-final-study-ai"
version = "0.2.0"
requires-python = ">=3.10,<3.14"
dependencies = ["defusedxml>=0.7,<1", "packaging>=24,<26"]

[project.scripts]
the-final-study-ai-gui = "gui.__main__:main"

[tool.setuptools.packages.find]
include = ["gui*", "scripts*"]

[project.optional-dependencies]
gui = ["PySide6>=6.8,<7"]
dev = [
  "bandit>=1.8,<2",
  "jsonschema>=4.23,<5",
  "mypy>=1.15,<3",
  "PySide6>=6.8,<7",
  "pytest>=8,<10",
  "pytest-qt>=4.4,<5",
  "ruff>=0.11,<1",
  "types-defusedxml>=0.7"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
qt_api = "pyside6"

[tool.ruff]
line-length = 100
target-version = "py310"
include = [
  "gui/**/*.py",
  "scripts/artifact_validators.py",
  "scripts/pipeline_contracts.py",
  "scripts/run_pipeline.py",
  "tests/**/*.py"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "E501", "SIM117"]
"gui/dependencies/probes.py" = ["S603", "E501"]
"gui/dependencies/providers.py" = ["E501"]
"gui/dependencies/registry.py" = ["E501"]
"gui/widgets/install_dialog.py" = ["E501"]
"gui/widgets/setup_page.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["gui", "scripts"]
exclude = [
  "scripts/segment_markdown_study_parts.py",
  "scripts/export_study_index_pdf.py",
  "scripts/combine_parts_to_sections.py",
  "scripts/chatgpt_login_probe.py",
  "scripts/ci/record_package_sizes.py",
]

[tool.bandit]
exclude_dirs = ["tests"]
